# engineering_practices_ml

./: .pre-commit-config.yaml  README.md  dvc.yaml  knn.ipynb  linting.md  pyproject.toml  requirements.txt  setup.cfg
.dvc/: config
data/: .gitignore  cancer_prec_acc.png.dvc  cancer_prec_prec.png.dvc  cancer_prec_recall.png.dvc  cancer_roc.png.dvc
src/: main.py
src/model/: KD_tree.py  KNearest_classifier.py
src/utils/: data_processing.py  metrics.py  plots.py
